Update song links and HTML structure

--- a/songs.html
+++ b/songs.html
@@ -11,32 +11,34 @@
 
   <div class="fade-page">
     <div class="songs-container">
-      <!-- Song 1 -->
+
+      <!-- Bargad -->
       <div class="song-card cinematic">
         <h2>Bargad</h2>
-        <iframe class="spotify-player" src="https://open.spotify.com/embed/track/TRACK_ID_BARGAD" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <iframe src="https://open.spotify.com/embed/track/5I1MqbcWyTaZtR6Jxqk0zt" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         <p class="song-line">A little chaotic, a little honest — just like us.</p>
       </div>
 
-      <!-- Song 2 -->
+      <!-- Finding Her -->
       <div class="song-card cinematic">
         <h2>Finding Her</h2>
-        <iframe class="spotify-player" src="https://open.spotify.com/embed/track/TRACK_ID_FINDING" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <iframe src="https://open.spotify.com/embed/track/0Q1eN6XkDldHu4Kf6mO6vX" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         <p class="song-line">If you were a song, this would be the vibe.</p>
       </div>
 
-      <!-- Song 3 -->
+      <!-- Paro -->
       <div class="song-card cinematic">
         <h2>Paro</h2>
-        <iframe class="spotify-player" src="https://open.spotify.com/embed/track/TRACK_ID_PARO" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <iframe src="https://open.spotify.com/embed/track/2XzI3UwQvM2Wq3uXKd8q0P" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         <p class="song-line">Soft, warm, and stupidly addictive — exactly your energy.</p>
       </div>
 
-      <div class="song-buttons">
-        <button class="btn" onclick="goToPage('index.html')">Back</button>
-        <button class="btn" onclick="goToPage('gallery.html')">Next</button>
-      </div>
     </div>
+  </div>
+
+  <div class="song-buttons">
+    <button class="btn" onclick="goToPage('index.html')">Back</button>
+    <button class="btn" onclick="goToPage('gallery.html')">Next</button>
   </div>
 
   <script src="script.js"></script>
